@@ -23,6 +23,7 @@ Date: 9/6/25
     - Fixed that the Quantum Bazaar wasn't allowing to trade interplanetary items.
     - Fixed that extra trades from bonze and silver rank items' bonus effects never involved coins.
     - The Collateral Damage quest is now only completed if the railgun projectile really is from your own force.
+    - Fixed that the initial hex generation was able to kill you if you walked away from the center while Nauvis was initializing.
   Changes:
     - Clicking on a GPS tag in chat no longer opens pinged hex cores.
     - Changed Sentient Spider inventory size to 120 (50% higher than spidertron).
